# src/routes/blog.routes.ts
@@ -2,16 +2,16 @@ import express from 'express';
 import httpBlog from '../controllers/blog.controllers';
 import isValid from'../middlewares/blogMiddleware';
 import auth from '../middlewares/authentication';
-import upload from '../helpers/multer';
+import imagesUpload from '../helpers/multer';
 
 const blogRoutes = express.Router();
 
-blogRoutes.post('/',  auth.authenticateAdmin, upload.single("image"), isValid, httpBlog.httpCreateBlog);
+blogRoutes.post('/',  auth.authenticateAdmin, imagesUpload.single('image'), httpBlog.httpCreateBlog);
 blogRoutes.get('/', httpBlog.httpGetBlogs);
 blogRoutes.get('/:id', httpBlog.httpGetOneBlog );
 blogRoutes.patch('/:id', auth.authenticateAdmin, isValid, httpBlog.httpUpdateBlog);
 blogRoutes.delete('/:id', auth.authenticateAdmin, httpBlog.httpDeleteBlog);
 blogRoutes.post('/:id/likes', httpBlog.httpLikeBlog)
-
+// blogRoutes.post('/upload',  auth.authenticateAdmin, imagesUpload.single('image'),  httpBlog.httpCreateBlogimage);
 
 export default blogRoutes;
